--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -650,12 +650,14 @@ scaledPredictions2 = predictedValues2 %>%
   left_join(modelParamMinMax, by = c('model', 'predictor')) %>%
   mutate(pair = str_extract(tree, "[1-9]"))
 
-scaledPredictions2$clade = rep(c(1, 2), nrow(predictedvalues2)/2)
+scaledPredictions2$clade = rep(c(1, 2), nrow(predictedValues2)/2)
 
 scaledPredictions2$scaledValue = apply(scaledPredictions2[, c('value', 'minVal', 'maxVal')], 1, 
                              function(x) scaleFunction(value = x[1], min = x[2], max = x[3]))
 
 scaledPredictions2 = left_join(scaledPredictions2, modelColors, by = 'model')
+
+write.csv(scaledPredictions2, 'derived_tree_data/scaled_predictions_empirical_trees.csv', row.names = F)
 
 
 
@@ -672,7 +674,7 @@ pro = 'dis1'
 # Specify metrics
 met1 = 'average_leaf_depth'
 met2 = 'j_one'
-met1label = 'MRD'
+met1label = 'ALD'
 met2label = 'J_1'
 
 par(mfrow = c(2, 3), mar = c(5, 3, 1, 1), oma = c(0, 3, 0, 0))
@@ -711,8 +713,8 @@ for (p in pairs) {
   
   tmpBarData = empiricalMetrics[empiricalMetrics$pair == p, c(met1, met2)] %>%
     rowwise() %>%
-    mutate(quantile.met1 = sum({{met1}} > simuData[, met1], na.rm = T)/nrow(simuData),
-           quantile.met2 = sum({{met2}} > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
+    mutate(quantile.met1 = sum(get(met1) > simuData[, met1], na.rm = T)/nrow(simuData),
+           quantile.met2 = sum(get(met2) > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
     dplyr::select(quantile.met1, quantile.met2) %>%
     t() %>%
     as.matrix()
@@ -765,7 +767,7 @@ for (p in pairs) {
   
   mtext(empiricalMetrics$cladeName[empiricalMetrics$pair == p], 1, at = 1:2, line = 2.5, cex = 1.1, padj = 0.5)
   offset = .22
-  mtext(c("MBL", "LSP", "MBL", "LSP"), 1, at = c(1.1 - offset, 1.05 + offset, 2.05 - offset, 2. + offset), line = .5, cex = .8)
+  mtext(c(met1label, met2label, met1label, met2label), 1, at = c(1.1 - offset, 1.05 + offset, 2.05 - offset, 2. + offset), line = .5, cex = .8)
   
   axis(2, at = seq(0.1, 1, by = 0.1), las = 1)
  
@@ -785,8 +787,8 @@ for (p in pairs) {
   
   tmpBarData = empiricalMetrics[empiricalMetrics$pair == p, c(met1, met2)] %>%
     rowwise() %>%
-    mutate(quantile.met1 = sum({{met1}} > simuData[, met1], na.rm = T)/nrow(simuData),
-           quantile.met2 = sum({{met2}} > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
+    mutate(quantile.met1 = sum(get(met1) > simuData[, met1], na.rm = T)/nrow(simuData),
+           quantile.met2 = sum(get(met2) > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
     dplyr::select(quantile.met1, quantile.met2) %>%
     t() %>%
     as.matrix()
