--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -365,7 +365,7 @@ modelColors = data.frame(model = models,
 par(mar = c(4, 6, 0, 0), mgp = c(4, 1, 0))
 
 # Squaring the correlation values of predictabilityR2CV to get R2's
-x = barplot(t(predictabilityR2CV^2), beside = T, las = 1, horiz = F, ylim = c(0,1.1), ylab = expression("Predicted-observed " ~ R^2), xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
+x = barplot(t((predictabilityR2CV)), beside = T, las = 1, horiz = F, ylim = c(-.1,1.1), ylab = expression("Predicted-observed " ~ R^2), xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
 
 # Add 'x' where process is missing from model
 missing.x = x[is.na(t(predictabilityR2CV))]
@@ -503,6 +503,125 @@ crossPredictabilityPlot(dispersalCP, cexLab = 2,
                     cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
                     mainText = "Dispersal")
 mtext("b)", 2, at = 1.2, las = 1, cex = 2.5, line = 2)
+
+####
+
+{r}
+# Modified version of image.plot
+image.real <- function(mat, xCol = c("blue", "white", "white", "red"), 
+                       range = c(-1,1), x.labels = rownames(mat), 
+                       y.labels = colnames(mat), cex.axis = 1) { 
+  mat <- t(mat)[,nrow(mat):1]
+  fields::image.plot(mat, axes = FALSE, zlim = range, 
+                     col = colorRampPalette(xCol)(30))
+  axis(1, at = seq(0, 1, length = nrow(mat)), labels = x.labels, cex.axis = cex.axis)
+  axis(2, at = seq(0, 1, length = ncol(mat)), labels = y.labels, las = 2, cex.axis = cex.axis)
+  box() 
+}
+
+
+# Function for plotting cross-model predictability
+#   set the processIndex to the process which is being evaluated
+#   1 - env, 2 - dis, 3 - nic, 4 - mut, 5 - com
+
+#   create a vector of models that implement the process specified above by
+#   excluding those that do not implement it
+#   1 - ca, 2 - fh, 3 - ge, 4 - hs, 5 - am, 6 - pw, 7 - ve, 8 - xe
+
+crossPredictability = function(processIndex, modelsToExclude,
+                              iterations = 100) {
+  
+  modelsTMP = models[-modelsToExclude]
+
+  CpredictabilityR2raw = array(dim = c(length(modelsTMP), length(modelsTMP), iterations))
+
+  for (i in 1:iterations) {
+
+    for(k in 1:length(modelsTMP)){
+      train = simuData[simuData$model == modelsTMP[k],
+                       c(predictorsIndices[processIndex],
+                         statisticsIndices2)]
+      train = train[complete.cases(train),]
+      if(nrow(train) > 0){
+        form = as.formula(paste(predictors[processIndex], "~ ."))
+        x = ranger(form, data = train)
+      } 
+      for(j in 1:length(modelsTMP)){
+        test = simuData[simuData$model == modelsTMP[j],
+                        c(predictorsIndices[processIndex], statisticsIndices2)]
+        test = test[complete.cases(test),]
+        if(nrow(test) > 0 & k != j){
+          y = predict(x, test)
+          CpredictabilityR2raw[k,j,i] = cor(y$predictions, test[,1], 
+                                         method = "kendall")
+        } # end if
+      } # end j testing 
+    } # end k training
+  } # end i iterations
+
+  # Average across all iterations to get a mean correlation
+  CpredictabilityR2 = rowMeans(CpredictabilityR2raw, dims = 2)
+
+  rownames(CpredictabilityR2) = modelAbbrevs$new[modelAbbrevs$original %in% modelsTMP]
+  colnames(CpredictabilityR2) = modelAbbrevs$new[modelAbbrevs$original %in% modelsTMP]
+
+  # within-model predictability
+  tmp = predictabilityR2CV[processIndex,-modelsToExclude]
+  for(i in 1:length(modelsTMP)) CpredictabilityR2[i,i] = tmp[i]
+
+  return(CpredictabilityR2)
+}
+
+  
+crossPredictabilityPlot = function(CpredictabilityR2,
+                                   cexValues = 1, cexMain = 2, 
+                                   cexAxis = 1.5, cexLab = 1.8,
+                                   mainText,
+                                   xCol = c("darkblue","blue",
+                                            "lightblue", "white",
+                                            "pink","red", "darkred"))
+{
+  
+  image.real(CpredictabilityR2, range = c(-1,1), xCol = xCol, cex.axis = cexAxis)
+  title(main = mainText, xlab = "Model predicted to", 
+        ylab = "Model trained on\n", cex.lab = cexLab, cex.main = cexMain)
+
+  # add values to cells
+  for(i in 1:length(modelsTMP)){
+    for(j in 1:length(modelsTMP)){
+      text((j-1)/(length(modelsTMP)-1),
+           1-(i-1)/(length(modelsTMP)-1), 
+           labels = format(round(CpredictabilityR2[i,j], digits = 2), nsmall = 2),
+           cex = cexValues)
+  
+    }
+  }
+}
+
+
+
+# 2-panel figure showing cross-predictability for a) dispersal and b) speciation
+# This takes several minutes.
+
+set.seed(1)
+envCP = crossPredictability(processIndex = 1, modelsToExclude = c(5,7,8), iterations = 100)
+
+comCP = crossPredictability(processIndex = 5, modelsToExclude = c(4,7), iterations = 100)
+
+
+par(mfrow = c(1, 2), mar = c(5,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
+
+crossPredictabilityPlot(envCP, cexLab = 2,
+                    cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
+                    mainText = "Envir. Filtering")
+mtext("a)", 2, at= 1.2, las = 1, cex = 2.5, line = 2)
+
+crossPredictabilityPlot(comCP, cexLab = 2,
+                    cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
+                    mainText = "Competition")
+mtext("b)", 2, at = 1.2, las = 1, cex = 2.5, line = 2)
+
+
 ```
 
 # Case studies
@@ -645,6 +764,77 @@ scaleFunction = function(value, min, max) {
 
 
 
+# Function for plotting inferred process strengths of empirical sister clades,
+# as well as actual tree metric values for those clades.
+# --bottom panel illustrates relative magnitude of two metrics which were 
+#   identified as the metrics with consistent responses to specified process
+
+empiricalModelInferencePlot = function(process, # env1, dis1, mut1, nic1, com1
+                                       metric1, metric2, 
+                                       met1label, met2label, 
+                                       pairOrder = c(1, 2, 5, 4, 6, 8)) {
+  
+  par(mfrow = c(2, 3), mar = c(5, 3, 1, 1), oma = c(0, 3, 0, 0))
+
+  panelLetters = letters[1:6]
+  panelIndex = 0
+
+  for (p in pairOrder) {
+  
+    panelIndex = panelIndex + 1
+    
+    tmp = filter(scaledPredictions2, pair == p, predictor == process)
+    
+    plot(c(0.5,2.5), range(tmp$scaledValue), type = 'n', xaxt = 'n', xlab = "",
+         ylab = "", las = 1, ylim = c(-.3, 1), yaxt = 'n')
+  
+    mtext(empiricalMetrics$cladeName[empiricalMetrics$pair == p], 1, at = 1:2, 
+          line = 2.5, cex = 1.1, padj = 0.5)
+    offset = .22
+    mtext(c(met1label, met2label, met1label, met2label), 1, at = c(1.1 - offset, 1.05 + offset, 2.05 - offset, 2. + offset), line = .5, cex = .8)
+  
+    axis(2, at = seq(0.1, 1, by = 0.1), las = 1)
+ 
+    abline(h = 0.1)
+     
+    for (m in unique(tmp$model)) {
+      
+      points(tmp$clade[tmp$model==m], tmp$scaledValue[tmp$model==m], type = 'b',
+             col = tmp$color[tmp$model==m], lwd = 3)
+      text(2.1, tmp$scaledValue[tmp$model==m & tmp$clade == 2],
+           tmp$newLabel[tmp$model==m], adj = 0)
+    } #end models
+  
+    # panel label
+    text(.55, 0.97, paste0("(", panelLetters[panelIndex], ")"), cex = 2)
+
+    # Add barplots showing empirical values of mean.Iprime and VRD for the two sister clades
+    par(new = T)
+  
+    tmpBarData = empiricalMetrics[empiricalMetrics$pair == p, 
+                                  c(metric1, metric2)] %>%
+      rowwise() %>%
+      mutate(quantile.met1 = sum(get(metric1) > simuData[, metric1], 
+                                 na.rm = T)/nrow(simuData),
+            quantile.met2 = sum(get(metric2) > simuData[, metric2], 
+                                 na.rm = T)/nrow(simuData)) %>%
+      dplyr::select(quantile.met1, quantile.met2) %>%
+      t() %>%
+      as.matrix()
+
+    barplot(tmpBarData, beside = T, yaxt = 'n', ylim = c(0, 3), border = NA, 
+            xlim = c(0.5, 7), xaxt = 'n', space = c(0.1, 1.2))
+  
+    if (panelIndex %in% c(1, 4)) {
+      mtext("Tree Metrics\n(quantiles)", 2, cex = .9, line = 1.8, at = 0.37)
+      mtext("Inferred Dispersal", 2, cex = 1.1, line = 3, at = 2)
+    }
+  } # end pairOrder
+
+} # end function
+
+
+
 
 scaledPredictions2 = predictedValues2 %>%
   left_join(modelParamMinMax, by = c('model', 'predictor')) %>%
@@ -661,150 +851,22 @@ write.csv(scaledPredictions2, 'derived_tree_data/scaled_predictions_empirical_tr
 
 
 
-# Plot of model inversion for dispersal across 6 empirical sister clade pairs
-# --bottom panel illustrates relative magnitude of average_leaf_depth and j_one
-# which were identified as the tree metrics with consistent responses to dispersal
 
-# Determines order of panels:
-pairs = c(1, 2, 5, 4, 6, 8)
 
-# Specify dispersal process
-pro = 'dis1' 
-
-# Specify metrics
-met1 = 'average_leaf_depth'
-met2 = 'j_one'
-met1label = 'ALD'
-met2label = 'J_1'
-
-par(mfrow = c(2, 3), mar = c(5, 3, 1, 1), oma = c(0, 3, 0, 0))
-
-panelLetters = letters[1:6]
-panelIndex = 0
-
-for (p in pairs) {
-  
-  panelIndex = panelIndex + 1
-    
-  tmp = filter(scaledPredictions2, pair == p, predictor == pro)
-    
-  plot(c(0.5,2.5), range(tmp$scaledValue), type = 'n', xaxt = 'n', xlab = "", ylab = "", las = 1,
-       ylim = c(-.3, 1), yaxt = 'n')
-  
-  mtext(empiricalMetrics$cladeName[empiricalMetrics$pair == p], 1, at = 1:2, line = 2.5, cex = 1.1, padj = 0.5)
-  offset = .22
-  mtext(c(met1label, met2label, met1label, met2label), 1, at = c(1.1 - offset, 1.05 + offset, 2.05 - offset, 2. + offset), line = .5, cex = .8)
-  
-  axis(2, at = seq(0.1, 1, by = 0.1), las = 1)
- 
-  abline(h = 0.1)
-     
-  for (m in unique(tmp$model)) {
-      
-    points(tmp$clade[tmp$model==m], tmp$scaledValue[tmp$model==m], type = 'b', col = tmp$color[tmp$model==m], lwd = 3)
-    text(2.1, tmp$scaledValue[tmp$model==m & tmp$clade == 2], tmp$newLabel[tmp$model==m], adj = 0)
-  }
-  
-  # panel label
-  text(.55, 0.97, paste0("(", panelLetters[panelIndex], ")"), cex = 2)
-
-  # Add barplots showing empirical values of mean.Iprime and VRD for the two sister clades
-  par(new = T)
-  
-  tmpBarData = empiricalMetrics[empiricalMetrics$pair == p, c(met1, met2)] %>%
-    rowwise() %>%
-    mutate(quantile.met1 = sum(get(met1) > simuData[, met1], na.rm = T)/nrow(simuData),
-           quantile.met2 = sum(get(met2) > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
-    dplyr::select(quantile.met1, quantile.met2) %>%
-    t() %>%
-    as.matrix()
-  
-  
-  barplot(tmpBarData, beside = T, yaxt = 'n', ylim = c(0, 3), border = NA, xlim = c(0.5, 7), xaxt = 'n', space = c(0.1, 1.2))
-  
-  #barplot(as.matrix(tmpBarData[, 3:4]), 
-  #        yaxt = 'n', ylim = c(0, 2.5), space = .95, border = NA, xlim = c(0.25, 4.5))  
-  
-  if (panelIndex %in% c(1, 4)) {
-    mtext("Tree Metrics\n(quantiles)", 2, cex = .9, line = 1.8, at = 0.37)
-    mtext("Inferred Dispersal", 2, cex = 1.1, line = 3, at = 2)
-  }
-  
-}
-
-###########################
-# Plot Inferred Speciation
 
 # Plot of model inversion for dispersal across 6 empirical sister clade pairs
 # --bottom panel illustrates relative magnitude of mntd and laplac_spectrum_p
 # which were identified as the tree metrics with consistent responses to speciation
 
-# Determines order of panels:
-pairs = c(1, 2, 5, 4, 6, 8)
+empiricalModelInferencePlot('mut1', metric1='mntd', metric2='laplac_spectrum_p',
+                            met1label = 'MNTD', met2label = 'LSP')
 
-# Specify speciation process
-pro = 'mut1' 
+# Plot of model inversion for dispersal across 6 empirical sister clade pairs
+# --bottom panel illustrates relative magnitude of average_leaf_depth and j_one
+# which were identified as the tree metrics with consistent responses to dispersal
 
-# Specify metrics
-met1 = 'mntd'
-met2 = 'laplac_spectrum_p'
-met1label = 'MNTD'
-met2label = 'LSP'
-
-par(mfrow = c(2, 3), mar = c(5, 3, 1, 1), oma = c(0, 3, 0, 0))
-
-panelLetters = letters[1:6]
-panelIndex = 0
-
-for (p in pairs) {
-  
-  panelIndex = panelIndex + 1
-    
-  tmp = filter(scaledPredictions2, pair == p, predictor == pro)
-    
-  plot(c(0.5,2.5), range(tmp$scaledValue), type = 'n', xaxt = 'n', xlab = "", ylab = "", las = 1,
-       ylim = c(-.3, 1), yaxt = 'n')
-  
-  mtext(empiricalMetrics$cladeName[empiricalMetrics$pair == p], 1, at = 1:2, line = 2.5, cex = 1.1, padj = 0.5)
-  offset = .22
-  mtext(c(met1label, met2label, met1label, met2label), 1, at = c(1.1 - offset, 1.05 + offset, 2.05 - offset, 2. + offset), line = .5, cex = .8)
-  
-  axis(2, at = seq(0.1, 1, by = 0.1), las = 1)
- 
-  abline(h = 0.1)
-     
-  for (m in unique(tmp$model)) {
-      
-    points(tmp$clade[tmp$model==m], tmp$scaledValue[tmp$model==m], type = 'b', col = tmp$color[tmp$model==m], lwd = 3)
-    text(2.1, tmp$scaledValue[tmp$model==m & tmp$clade == 2], tmp$newLabel[tmp$model==m], adj = 0)
-  }
-  
-  # panel label
-  text(.55, 0.97, paste0("(", panelLetters[panelIndex], ")"), cex = 2)
-
-  # Add barplots showing empirical values of mean_branch_length and laplac_spectrum_p for the two sister clades
-  par(new = T)
-  
-  tmpBarData = empiricalMetrics[empiricalMetrics$pair == p, c(met1, met2)] %>%
-    rowwise() %>%
-    mutate(quantile.met1 = sum(get(met1) > simuData[, met1], na.rm = T)/nrow(simuData),
-           quantile.met2 = sum(get(met2) > simuData[, met2], na.rm = T)/nrow(simuData)) %>%
-    dplyr::select(quantile.met1, quantile.met2) %>%
-    t() %>%
-    as.matrix()
-  
-  
-  barplot(tmpBarData, beside = T, yaxt = 'n', ylim = c(0, 3), border = NA, xlim = c(0.5, 7), xaxt = 'n', space = c(0.1, 1.2))
-  
-  #barplot(as.matrix(tmpBarData[, 3:4]), 
-  #        yaxt = 'n', ylim = c(0, 2.5), space = .95, border = NA, xlim = c(0.25, 4.5))  
-  
-  if (panelIndex %in% c(1, 4)) {
-    mtext("Tree Metrics\n(quantiles)", 2, cex = .9, line = 1.8, at = 0.37)
-    mtext("Inferred Speciation", 2, cex = 1.1, line = 3, at = 2)
-  }
-  
-}
+empiricalModelInferencePlot('dis1', metric1='average_leaf_depth', metric2='j_one',
+                            met1label = 'ALD', met2label = 'J_1')
 
 
 ```
