--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -92,7 +92,13 @@ predictors = colnames(simuData)[c(14,16,18,20,22)]
 numModelsPerPredictor = c(5, 7, 4, 7, 6)
 
 # 8 models (accounting for abbreviation changes post-experiment)
-modelAbbrevs = data.frame(original = c('ca', 'fh', 'gen', 'hs', 'la', 'pontarp', 've', 'xe'), new = c('ca', 'fh', 'ge', 'hs', 'am', 'pw', 've', 'xe'))
+modelAbbrevs = data.frame(original = c('ca', 'fh', 'gen', 'hs', 'la', 'pontarp', 've', 'xe'), 
+                    new = c('ca', 'fh', 'ge', 'hs', 'am', 'pw', 've', 'xe'),
+                    env = c(TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, FALSE, FALSE),
+                    dis = c(TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, TRUE, TRUE),
+                    nic = c(TRUE, FALSE, TRUE, TRUE, FALSE, TRUE, FALSE, FALSE),
+                    mut = c(TRUE, TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, TRUE),
+                    com = c(TRUE, TRUE, TRUE, FALSE, TRUE, TRUE, FALSE, TRUE))
 
 models = modelAbbrevs$original
 
@@ -132,7 +138,7 @@ heatmaply(corrs2, colors = cool_warm)
 
 ## Calculating correlation coefficients
 
-Calculating individual as well as model-averaged correlation coefficients between all metrics and processes
+Calculating individual correlation coefficients between all tree shape metrics and simulation processes.
 
 ```{r, cache=cacheData}
 # NOTE: Change next line to statisticsIndices2 to view the smaller subset of metrics not strongly correlated with richness
@@ -187,7 +193,7 @@ for(i in 1:length(statisticsIndices)){
 
 ## Full plot
 
-Definition of image plot
+Plotting metric-process correlations across all models, metrics, and processes.
 
 ```{r}
 image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gray94", "pink","red", "darkred"), 
@@ -304,7 +310,7 @@ library(ranger)
 
 ## Calculating RF and CV RF values
 
-To be fair, we run this analysis using only the tree metrics that are not strongly correlated with richness
+Because simulation models differ substantially in the size of trees they typically produce, we run the random forests and conduct model inversions using only the tree metrics that are not strongly correlated with richness.
 
 ```{r, cache=cacheData}
 
@@ -404,17 +410,19 @@ image.real <- function(mat, xCol = c("blue", "white", "white", "red"),
 
 
 # Function for plotting cross-model predictability
-#   set the processIndex to the process which is being evaluated
-#   1 - env, 2 - dis, 3 - nic, 4 - mut, 5 - com
 
-#   create a vector of models that implement the process specified above by
-#   excluding those that do not implement it
-#   1 - ca, 2 - fh, 3 - ge, 4 - hs, 5 - am, 6 - pw, 7 - ve, 8 - xe
-
-crossPredictability = function(processIndex, modelsToExclude,
-                              iterations = 100) {
+crossPredictability = function(process, # env, dis, nic, mut, com
+                               iterations = 100, 
+                               seed = 1) {
   
-  modelsTMP = models[-modelsToExclude]
+  set.seed(seed)
+  
+  processes = c('env', 'dis', 'nic', 'mut', 'com')
+  processIndex = which(processes == process)
+  
+  modelsToInclude = modelAbbrevs[, process]
+  
+  modelsTMP = models[modelsToInclude]
 
   CpredictabilityR2raw = array(dim = c(length(modelsTMP), length(modelsTMP), iterations))
 
@@ -449,7 +457,7 @@ crossPredictability = function(processIndex, modelsToExclude,
   colnames(CpredictabilityR2) = modelAbbrevs$new[modelAbbrevs$original %in% modelsTMP]
 
   # within-model predictability
-  tmp = predictabilityR2CV[processIndex,-modelsToExclude]
+  tmp = predictabilityR2CV[processIndex,modelsToInclude]
   for(i in 1:length(modelsTMP)) CpredictabilityR2[i,i] = tmp[i]
 
   return(CpredictabilityR2)
@@ -467,7 +475,10 @@ crossPredictabilityPlot = function(CpredictabilityR2,
   
   image.real(CpredictabilityR2, range = c(-1,1), xCol = xCol, cex.axis = cexAxis)
   title(main = mainText, xlab = "Model predicted to", 
-        ylab = "Model trained on\n", cex.lab = cexLab, cex.main = cexMain)
+        cex.lab = cexLab, cex.main = cexMain)
+  mtext("Model trained on\n", 2, line = 2.7, cex = cexLab)
+  mtext("(modelers' assumption of reality)", 2, line = 3, cex = 1.1)
+  mtext("(given that reality works like this model)", 1, line = 4.2, cex = 1.1)
 
   # add values to cells
   for(i in 1:length(modelsTMP)){
@@ -486,10 +497,9 @@ crossPredictabilityPlot = function(CpredictabilityR2,
 # 2-panel figure showing cross-predictability for a) dispersal and b) speciation
 # This takes several minutes.
 
-set.seed(1)
-speciationCP = crossPredictability(processIndex = 4, modelsToExclude = 6, iterations = 100)
+speciationCP = crossPredictability(process = 'mut', iterations = 100)
 
-dispersalCP = crossPredictability(processIndex = 2, modelsToExclude = 5, iterations = 100)
+dispersalCP = crossPredictability(process = 'dis', iterations = 100)
 
 
 par(mfrow = c(1, 2), mar = c(5,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
@@ -504,112 +514,20 @@ crossPredictabilityPlot(dispersalCP, cexLab = 2,
                     mainText = "Dispersal")
 mtext("b)", 2, at = 1.2, las = 1, cex = 2.5, line = 2)
 
-####
-
-{r}
-# Modified version of image.plot
-image.real <- function(mat, xCol = c("blue", "white", "white", "red"), 
-                       range = c(-1,1), x.labels = rownames(mat), 
-                       y.labels = colnames(mat), cex.axis = 1) { 
-  mat <- t(mat)[,nrow(mat):1]
-  fields::image.plot(mat, axes = FALSE, zlim = range, 
-                     col = colorRampPalette(xCol)(30))
-  axis(1, at = seq(0, 1, length = nrow(mat)), labels = x.labels, cex.axis = cex.axis)
-  axis(2, at = seq(0, 1, length = ncol(mat)), labels = y.labels, las = 2, cex.axis = cex.axis)
-  box() 
-}
-
-
-# Function for plotting cross-model predictability
-#   set the processIndex to the process which is being evaluated
-#   1 - env, 2 - dis, 3 - nic, 4 - mut, 5 - com
-
-#   create a vector of models that implement the process specified above by
-#   excluding those that do not implement it
-#   1 - ca, 2 - fh, 3 - ge, 4 - hs, 5 - am, 6 - pw, 7 - ve, 8 - xe
-
-crossPredictability = function(processIndex, modelsToExclude,
-                              iterations = 100) {
-  
-  modelsTMP = models[-modelsToExclude]
-
-  CpredictabilityR2raw = array(dim = c(length(modelsTMP), length(modelsTMP), iterations))
-
-  for (i in 1:iterations) {
-
-    for(k in 1:length(modelsTMP)){
-      train = simuData[simuData$model == modelsTMP[k],
-                       c(predictorsIndices[processIndex],
-                         statisticsIndices2)]
-      train = train[complete.cases(train),]
-      if(nrow(train) > 0){
-        form = as.formula(paste(predictors[processIndex], "~ ."))
-        x = ranger(form, data = train)
-      } 
-      for(j in 1:length(modelsTMP)){
-        test = simuData[simuData$model == modelsTMP[j],
-                        c(predictorsIndices[processIndex], statisticsIndices2)]
-        test = test[complete.cases(test),]
-        if(nrow(test) > 0 & k != j){
-          y = predict(x, test)
-          CpredictabilityR2raw[k,j,i] = cor(y$predictions, test[,1], 
-                                         method = "kendall")
-        } # end if
-      } # end j testing 
-    } # end k training
-  } # end i iterations
-
-  # Average across all iterations to get a mean correlation
-  CpredictabilityR2 = rowMeans(CpredictabilityR2raw, dims = 2)
-
-  rownames(CpredictabilityR2) = modelAbbrevs$new[modelAbbrevs$original %in% modelsTMP]
-  colnames(CpredictabilityR2) = modelAbbrevs$new[modelAbbrevs$original %in% modelsTMP]
-
-  # within-model predictability
-  tmp = predictabilityR2CV[processIndex,-modelsToExclude]
-  for(i in 1:length(modelsTMP)) CpredictabilityR2[i,i] = tmp[i]
-
-  return(CpredictabilityR2)
-}
-
-  
-crossPredictabilityPlot = function(CpredictabilityR2,
-                                   cexValues = 1, cexMain = 2, 
-                                   cexAxis = 1.5, cexLab = 1.8,
-                                   mainText,
-                                   xCol = c("darkblue","blue",
-                                            "lightblue", "white",
-                                            "pink","red", "darkred"))
-{
-  
-  image.real(CpredictabilityR2, range = c(-1,1), xCol = xCol, cex.axis = cexAxis)
-  title(main = mainText, xlab = "Model predicted to", 
-        ylab = "Model trained on\n", cex.lab = cexLab, cex.main = cexMain)
-
-  # add values to cells
-  for(i in 1:length(modelsTMP)){
-    for(j in 1:length(modelsTMP)){
-      text((j-1)/(length(modelsTMP)-1),
-           1-(i-1)/(length(modelsTMP)-1), 
-           labels = format(round(CpredictabilityR2[i,j], digits = 2), nsmall = 2),
-           cex = cexValues)
-  
-    }
-  }
-}
 
 
 
-# 2-panel figure showing cross-predictability for a) dispersal and b) speciation
+# 2-panel figure showing cross-predictability for a) environmental filtering and 
+# b) competition.
 # This takes several minutes.
 
-set.seed(1)
-envCP = crossPredictability(processIndex = 1, modelsToExclude = c(5,7,8), iterations = 100)
+envCP = crossPredictability(process = 'env', iterations = 100)
 
-comCP = crossPredictability(processIndex = 5, modelsToExclude = c(4,7), iterations = 100)
+comCP = crossPredictability(process = 'com', iterations = 100)
 
+nicCP = crossPredictability(process = 'nic', iterations = 100)
 
-par(mfrow = c(1, 2), mar = c(5,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
+par(mfrow = c(1, 2), mar = c(6,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
 
 crossPredictabilityPlot(envCP, cexLab = 2,
                     cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
