--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -278,13 +278,15 @@ com.metrics = rownames(agreement)[agreement[,5] >= 5]
 metricsToPlot = dimnames(R2MatFull)[[1]] %in% rownames(agreement) &
                            !dimnames(R2MatFull)[[1]] %in% redundantMetrics &
                            !dimnames(R2MatFull)[[1]] %in% richnessCorrelatedMetrics
-# But add back number_of_lineages
-metricsToPlot[1] = TRUE
+
+# But add back number_of_lineages and several common metrics
+commonMetrics = c('number_of_lineages', 'gamma', 'beta', 'vpd', 'psv', 'average_leaf_depth')
+metricsToPlot[dimnames(R2MatFull)[[1]] %in% commonMetrics] = TRUE
 
 highlightMat = R2MatFull[metricsToPlot,,]
 pMatHighlight = pMatFull[metricsToPlot,,]
 
-par(mar = c(5,10,5,3))
+par(mfrow = c(1,1), mar = c(5,10,5,3))
 
 # Tidier labels
 alt.x.labels = dimnames(highlightMat)[[1]]
@@ -467,7 +469,7 @@ crossPredictability = function(process, # env, dis, nic, mut, com
 crossPredictabilityPlot = function(CpredictabilityR2,
                                    cexValues = 1, cexMain = 2, 
                                    cexAxis = 1.5, cexLab = 1.8,
-                                   mainText,
+                                   mainText, cexLabSub = 1.2,
                                    xCol = c("darkblue","blue",
                                             "lightblue", "white",
                                             "pink","red", "darkred"))
@@ -477,8 +479,8 @@ crossPredictabilityPlot = function(CpredictabilityR2,
   title(main = mainText, xlab = "Model predicted to", 
         cex.lab = cexLab, cex.main = cexMain)
   mtext("Model trained on\n", 2, line = 2.7, cex = cexLab)
-  mtext("(modelers' assumption of reality)", 2, line = 3, cex = 1.1)
-  mtext("(given that reality works like this model)", 1, line = 4.2, cex = 1.1)
+  mtext("(modelers' assumption of reality)", 2, line = 3.4, cex = cexLabSub)
+  mtext("(given that reality works like this model)", 1, line = 4.2, cex = cexLabSub)
 
   # add values to cells
   for(i in 1:length(modelsTMP)){
@@ -502,16 +504,17 @@ speciationCP = crossPredictability(process = 'mut', iterations = 100)
 dispersalCP = crossPredictability(process = 'dis', iterations = 100)
 
 
-par(mfrow = c(1, 2), mar = c(5,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
+par(mfrow = c(1, 2), mar = c(6,7,4,4), mgp = c(3, 1, 0), oma = c(0, 0, 0, 1))
 
 crossPredictabilityPlot(speciationCP, cexLab = 2,
-                    cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
+                    cexAxis = 1.8, cexValues = 1.3, cexMain = 2.5,
+                    cexLabSub = 1.3,
                     mainText = "Mutation/speciation")
 mtext("a)", 2, at= 1.2, las = 1, cex = 2.5, line = 2)
 
 crossPredictabilityPlot(dispersalCP, cexLab = 2,
-                    cexAxis = 1.7, cexValues = 1.3, cexMain = 2,
-                    mainText = "Dispersal")
+                    cexAxis = 1.8, cexValues = 1.3, cexMain = 2.5,
+                    cexLabSub = 1.3, mainText = "Dispersal")
 mtext("b)", 2, at = 1.2, las = 1, cex = 2.5, line = 2)
 
 
