--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -388,6 +388,7 @@ rownames(predictability2R2) = predictors
 colnames(predictability2R2) = models
 predictabilityR2CV = predictability2R2
 
+set.seed(0)
 for(j in 1:length(predictorsIndices)){
   for(k in 1:length(models)){
     tmp = simuData[simuData$model == models[k],c(predictorsIndices[j], statisticsIndices2)]
@@ -438,7 +439,7 @@ x = barplot(t((predictabilityR2CV))^2, beside = T, las = 1, horiz = F, ylim = c(
 missing.x = x[is.na(t(predictabilityR2CV))]
 text(x = missing.x, y = rep(0.02, length(missing.x)), '-', cex = 2)
 
-axis(1, at = c(5, 14, 23, 32, 41), labels = c("env.\nfiltering", "dispersal", "niche\nconserv.", "mutation/\nspeciation", "competition"), cex.axis = 1.6, line = 1.3, tick = F)
+axis(1, at = c(5, 14, 23, 32, 41), labels = c("Env.\nfiltering", "Dispersal", "Niche\nconserv.", "Speciation", "Competition"), cex.axis = 1.6, line = 1.3, tick = F)
 
 axis(1, at = c(0, 9.5, 18.5, 27.5, 36.5, 45.5), tick = T, tck = -0.04, labels = F)
 
